--- a/recasthelloworld/templates/result.html
+++ b/recasthelloworld/templates/result.html
@@ -16,6 +16,6 @@ $(document).ready(function(){
 </div>
 
 <div class="row">
-<a href="/resultfile/{{requestId}}/{{parameter_pt}}/helloWorld.txt">hello world</a>
+<a href="/resultfile/{{requestId}}/{{parameter_pt}}/dedicated/helloWorld.txt">hello world</a>
 </div>
 {% endblock %}
